Styles: Generic scss styles and color variables

--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -7,6 +7,8 @@
 html {
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
+  height: auto !important;
+  overflow-y: scroll;
 
   font-size: 100%;
 }
