--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,6 @@
 $biufood_orange: #ff4545;
 $biufood_black: #000000;
+$biufood_grey: #f0efef;
+$biufood_textxcolor: #282828;
+$biufood_white: #ffff;
+$biufood_lightgrey: #1c1c1c;
