Feature: Added react-hook-form, redux selector

--- a/src/components/Signup/signup.modules.scss
+++ b/src/components/Signup/signup.modules.scss
@@ -32,7 +32,8 @@
       margin-top: to-rem(15);
       @include custom_input;
     }
-    button {
+    
+    input[type="submit"] {
       padding: 0.6em 2.7em;
       background-color: $biufood_orange;
       font-weight: 700;
